--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,24 @@
   --foreground: #171717;
 }
 
-@theme inline {
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --color-brpink-50: #fee5e7;
+  --color-brpink-200: #f05069;
+  --color-brpink-300: #f14e69;
+  --color-brpink-500: #cc122d;
+
+  --color-brgreen-50: #f3faf7;
+  --color-brgreen-200: #7ccbb6;
+  --color-brgreen-300: #52af99;
+
+  --color-brgray-100: #878789;
+  --color-brgray-300: #414142;
+  --color-brgray-500: #323232;
 }
 
 @media (prefers-color-scheme: dark) {
