style: add new brpink-600 color variable to globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --color-brpink-200: #f05069;
   --color-brpink-300: #f14e69;
   --color-brpink-500: #cc122d;
+  --color-brpink-600: #b30e27;
 
   --color-brgreen-50: #f3faf7;
   --color-brgreen-200: #7ccbb6;
