style: add multiple new color variables to globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,19 +12,28 @@
   --font-mono: var(--font-geist-mono);
 
   --color-brpink-50: #fee5e7;
+  --color-brpink-100: #f05069;
   --color-brpink-200: #f05069;
   --color-brpink-300: #f14e69;
+  --color-brpink-400: #f14e69;
   --color-brpink-500: #cc122d;
   --color-brpink-600: #b30e27;
 
   --color-brgreen-50: #f3faf7;
+  --color-brgreen-100: #e6f5f1;
   --color-brgreen-200: #7ccbb6;
   --color-brgreen-300: #52af99;
+  --color-brgreen-400: #38947d;
+  --color-brgreen-500: #247a65;
+  --color-brgreen-600: #1a5e4e;
 
   --color-brgray-50: #e1e1e2;
   --color-brgray-100: #878789;
+  --color-brgray-200: #616162;
   --color-brgray-300: #414142;
-  --color-brgray-500: #323232;
+  --color-brgray-400: #323232;
+  --color-brgray-500: #212121;
+  --color-brgray-600: #171717;
 }
 
 body {
