style: minor UI changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,12 +20,12 @@
   --color-brpink-600: #b30e27;
 
   --color-brgreen-50: #f3faf7;
-  --color-brgreen-100: #e6f5f1;
-  --color-brgreen-200: #7ccbb6;
+  --color-brgreen-100: #aee1d1;
+  --color-brgreen-200: #7dcbb6;
   --color-brgreen-300: #52af99;
-  --color-brgreen-400: #38947d;
-  --color-brgreen-500: #247a65;
-  --color-brgreen-600: #1a5e4e;
+  --color-brgreen-400: #3d917e;
+  --color-brgreen-500: #2b7667;
+  --color-brgreen-600: #1b6052;
 
   --color-brgray-50: #e1e1e2;
   --color-brgray-100: #878789;
